--- a/index.html
+++ b/index.html
@@ -3,140 +3,193 @@
 <head>
 <meta charset="UTF-8">
 <title>Searchmas</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-
-<script async src="https://cse.google.com/cse.js?cx=949e339dabb3b4e60"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
+html,body{margin:0;padding:0;height:100%;font-family:Arial,sans-serif;}
 body{
-  margin:0;
-  font-family:Arial, sans-serif;
-  background:#0e1a0e;
-  color:white;
+  background:
+    url('Santa.png') left center / 50% 100vh no-repeat,
+    url('Santa.png') right center / 50% 100vh no-repeat;
 }
 
-header{
-  background:#cc0000;
-  padding:12px 16px;
-  font-size:22px;
-}
-
-#searchBox{
-  width:96%;
-  padding:12px;
-  font-size:18px;
-  border:none;
-  outline:none;
-  border-radius:6px;
-  margin:10px;
-}
-
-#tabs{
+#home{
+  min-height:100vh;
   display:flex;
-  gap:6px;
-  padding:8px 10px;
-  background:#141414;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
 }
 
-.tab{
-  padding:6px 14px;
-  border-radius:6px;
-  background:#222;
+.logo{
+  font-size:clamp(48px,10vw,80px);
+  font-weight:bold;
+}
+
+.search-box{max-width:580px;width:90%;}
+input{
+  width:100%;
+  padding:14px 20px;
+  font-size:18px;
+  border-radius:24px;
+  border:1px solid #dfe1e5;
+}
+
+#results{
+  display:none;
+  min-height:100vh;
+  background:#339933;
+  padding:15px;
+}
+
+.topbar{
+  display:flex;
+  gap:10px;
+  align-items:center;
+}
+
+.back{
+  font-size:22px;
   cursor:pointer;
 }
 
+.tabs{
+  display:flex;
+  gap:18px;
+  margin:15px 0;
+  border-bottom:1px solid rgba(255,255,255,.35);
+}
+
+.tab{
+  cursor:pointer;
+  color:#eaffea;
+  padding-bottom:6px;
+}
+
 .tab.active{
-  background:#cc0000;
+  border-bottom:3px solid #fff;
+  color:#fff;
 }
 
 #content{
+  background:#fff;
+  border-radius:14px;
   padding:12px;
-}
-
-/* Google results greenish background */
-.gsc-control-cse{
-  background:#1f331f !important;
-  border-radius:12px;
-  padding:14px !important;
-}
-
-.gsc-webResult.gsc-result{
-  background:#233f23 !important;
-  border-radius:10px !important;
-  padding:12px !important;
-  margin:10px 0 !important;
-}
-
-.gs-title a{color:#9eff9e !important;}
-.gs-snippet{color:#ddffdd !important;}
-.gsc-result-info{color:#99cc99 !important;}
-
-iframe{
-  border:none;
-  width:100%;
-  height:75vh;
-  border-radius:12px;
+  min-height:70vh;
 }
 </style>
+
+<!-- Google PSE -->
+<script async src="https://cse.google.com/cse.js?cx=949e339dabb3b4e60"></script>
+
 </head>
 
 <body>
 
-<header>Searchmas</header>
-
-<input id="searchBox" placeholder="Search..." onkeydown="if(event.key==='Enter') search()">
-
-<div id="tabs">
-  <div class="tab active" onclick="switchTab('all')">All</div>
-  <div class="tab" onclick="switchTab('images')">Images</div>
-  <div class="tab" onclick="switchTab('videos')">Videos</div>
-  <div class="tab" onclick="switchTab('news')">News</div>
+<div id="home">
+  <div class="logo">Searchmas</div>
+  <form class="search-box" onsubmit="startSearch(event)">
+    <input id="qHome" placeholder="Search the web">
+  </form>
 </div>
 
-<div id="content"></div>
+<div id="results">
+  <div class="topbar">
+    <div class="back" onclick="goHome()">⬅</div>
+    <input id="qTop">
+  </div>
+
+  <div class="tabs">
+    <div class="tab active" data-tab="all">All</div>
+    <div class="tab" data-tab="images">Images</div>
+    <div class="tab" data-tab="videos">Videos</div>
+    <div class="tab" data-tab="news">News</div>
+  </div>
+
+  <div id="content"></div>
+</div>
 
 <script>
-let currentTab="all";
+let tab="all";
 
-function switchTab(tab){
-  currentTab=tab;
-  document.querySelectorAll('.tab').forEach(t=>t.classList.remove('active'));
-  event.target.classList.add('active');
+const homeEl=document.getElementById("home");
+const resEl=document.getElementById("results");
+const qHome=document.getElementById("qHome");
+const qTop=document.getElementById("qTop");
+const content=document.getElementById("content");
+
+function startSearch(e){
+  e.preventDefault();
+  const q=qHome.value.trim();
+  if(!q) return;
+  history.pushState({}, "", "?q="+encodeURIComponent(q));
+  showResults(q);
+}
+
+qTop.onkeydown=e=>{
+  if(e.key==="Enter"){
+    e.preventDefault();
+    const q=qTop.value.trim();
+    if(!q) return;
+    history.pushState({}, "", "?q="+encodeURIComponent(q));
+    showResults(q);
+  }
+};
+
+document.querySelectorAll(".tab").forEach(t=>{
+  t.onclick=()=>{
+    document.querySelectorAll(".tab").forEach(x=>x.classList.remove("active"));
+    t.classList.add("active");
+    tab=t.dataset.tab;
+    search();
+  };
+});
+
+function showResults(q){
+  homeEl.style.display="none";
+  resEl.style.display="block";
+  qTop.value=q;
   search();
 }
 
+function goHome(){
+  history.replaceState({}, "", location.pathname);
+  resEl.style.display="none";
+  homeEl.style.display="flex";
+}
+
 function search(){
-  let q=document.getElementById("searchBox").value.trim();
-  if(!q)return;
+  const q=qTop.value.trim();
+  if(!q) return;
 
-  history.replaceState(null,"","?q="+encodeURIComponent(q));
-
-  let c=document.getElementById("content");
-
-  if(currentTab==="all"){
-    c.innerHTML='<div class="gcse-searchresults-only"></div>';
+  if(tab==="all" || tab==="images"){
+    content.innerHTML=`
+      <gcse-searchresults-only
+        data-query="${q}"
+        data-resultset="${tab==='images'?'image':'web'}">
+      </gcse-searchresults-only>
+    `;
+    return;
   }
 
-  if(currentTab==="images"){
-    c.innerHTML='<div class="gcse-searchresults-only"></div>';
+  if(tab==="videos"){
+    content.innerHTML=`
+      <a href="https://www.youtube.com/results?search_query=${encodeURIComponent(q)}"
+         target="_blank">Open YouTube results for "${q}"</a>
+    `;
   }
 
-  if(currentTab==="videos"){
-    c.innerHTML='<iframe src="https://www.bing.com/videos/search?q='+encodeURIComponent(q)+'"></iframe>';
-  }
-
-  if(currentTab==="news"){
-    c.innerHTML='<iframe src="https://www.bing.com/news/search?q='+encodeURIComponent(q)+'"></iframe>';
-  }
-}
-
-window.onload=()=>{
-  const p=new URLSearchParams(location.search);
-  if(p.has("q")){
-    document.getElementById("searchBox").value=p.get("q");
-    search();
+  if(tab==="news"){
+    content.innerHTML=`
+      <a href="https://news.google.com/search?q=${encodeURIComponent(q)}"
+         target="_blank">Open Google News results for "${q}"</a>
+    `;
   }
 }
+
+const params=new URLSearchParams(location.search);
+const startQ=params.get("q");
+if(startQ) showResults(startQ);
 </script>
 
 </body>
