--- a/index.html
+++ b/index.html
@@ -3,12 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <meta http-equiv="Content-Security-Policy" content="frame-ancestors 'none';">
-<!-- Favicon -->
+
 <link rel="icon" type="image/png" href="favicon.png">
-
-<!-- Web App Manifest -->
 <link rel="manifest" href="manifest.json">
-
 
 <script>
 (function(){
@@ -18,10 +15,10 @@
 })();
 </script>
 
+<script async src="https://cse.google.com/cse.js?cx=949e339dabb3b4e60"></script>
+
 <title>Searchmas</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="icon" href="favicon.png">
-<link rel="manifest" href="manifest.json">
 <meta name="theme-color" content="#1a73e8">
 
 <style>
@@ -68,40 +65,7 @@ input{width:100%;padding:14px 20px;font-size:18px;border-radius:24px;border:1px 
 .tab{cursor:pointer;color:#5f6368;padding-bottom:8px;}
 .tab.active{color:#1a73e8;border-bottom:3px solid #1a73e8;}
 
-.card{
-  background:#fff;
-  border-radius:12px;
-  padding:14px 16px;
-  margin:12px 0;
-  cursor:pointer;
-  box-shadow:0 2px 6px rgba(0,0,0,.08);
-  color:#000;
-  text-decoration:none;
-  display:flex;
-  flex-direction:column;
-  gap:6px;
-}
-
-.card img{width:28px;height:28px;}
-
-.grid{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
-  gap:12px;
-}
-.grid img{
-  width:100%;
-  aspect-ratio:16/9;
-  object-fit:cover;
-  border-radius:8px;
-  max-height:250px;
-}
-
-@media(max-width:480px){
-  .search-box{width:95%;}
-  .grid{grid-template-columns:repeat(auto-fit,minmax(150px,1fr));gap:8px;}
-  .grid img{max-height:180px;}
-}
+#content{background:#339933;border-radius:12px;padding:12px;}
 </style>
 </head>
 
@@ -127,17 +91,14 @@ input{width:100%;padding:14px 20px;font-size:18px;border-radius:24px;border:1px 
     <div class="tab" data-tab="images">Images</div>
     <div class="tab" data-tab="videos">Videos</div>
     <div class="tab" data-tab="news">News</div>
-    <div class="tab" data-tab="flights">Flights</div>
   </div>
 
   <div id="content"></div>
 </div>
 
 <script>
-const UNSPLASH="1IF0KThuYgH722kFgZ5TaZ1tyckTiMUri6DxUSeZ-fk";
-const YT="AIzaSyBKN7qNWVOSjIf040epQA579G29IzPxqpI";
-
 let tab="all";
+
 const homeEl=document.getElementById("home");
 const resEl=document.getElementById("results");
 const qHome=document.getElementById("qHome");
@@ -146,8 +107,7 @@ const content=document.getElementById("content");
 
 const params=new URLSearchParams(location.search);
 const startQ=params.get("q");
-if(startQ && startQ.trim()){showResults(startQ);}
-else{history.replaceState({}, "", location.pathname);}
+if(startQ && startQ.trim()) showResults(startQ);
 
 function startSearch(e){
   e.preventDefault();
@@ -189,66 +149,32 @@ function goHome(){
   homeEl.style.display="flex";
 }
 
-function card(icon,text,url){
-  return `<a class="card" href="${url}" target="_blank">
-    ${icon?`<img src="${icon}">`:''}<span>${text}</span>
-  </a>`;
-}
-
 function search(){
   const q=qTop.value.trim();
   if(!q) return;
-  const enc=encodeURIComponent(q);
-  content.innerHTML="<p>Loading results...</p>";
 
-  if(tab==="all"){
-    fetch(`https://api.allorigins.win/get?url=${encodeURIComponent('https://duckduckgo.com/html/?q='+enc)}`)
-      .then(r=>r.json())
-      .then(d=>{
-        const doc=new DOMParser().parseFromString(d.contents,"text/html");
-        const results=[...doc.querySelectorAll('.result__body')];
-        if(!results.length){content.innerHTML="<p>No results found.</p>";return;}
-        content.innerHTML=results.slice(0,10).map(r=>{
-          const a=r.querySelector('.result__a');
-          const s=r.querySelector('.result__snippet');
-          return `<a class="card" href="${a.href}" target="_blank">
-            <strong>${a.textContent}</strong>
-            <p>${s?s.textContent:""}</p>
-          </a>`;
-        }).join("");
-      })
-      .catch(()=>content.innerHTML="<p>Error loading results.</p>");
-  }
-
-  if(tab==="images"){
-    fetch(`https://api.unsplash.com/search/photos?query=${enc}&per_page=18`,{
-      headers:{Authorization:"Client-ID "+UNSPLASH}
-    })
-    .then(r=>r.json())
-    .then(d=>{
-      content.innerHTML=`<div class="grid">${d.results.map(i=>`<img src="${i.urls.regular}">`).join("")}</div>`;
-    });
+  if(tab==="all" || tab==="images"){
+    content.innerHTML=`
+      <gcse-searchresults-only
+        data-query="${q}"
+        data-resultset="${tab==='images'?'image':'web'}">
+      </gcse-searchresults-only>
+    `;
+    return;
   }
 
   if(tab==="videos"){
-    fetch(`https://www.googleapis.com/youtube/v3/search?part=snippet&type=video&maxResults=12&q=${enc}&key=${YT}`)
-      .then(r=>r.json())
-      .then(d=>{
-        content.innerHTML=`<div class="grid">${d.items.map(v=>`
-          <a href="https://youtube.com/watch?v=${v.id.videoId}" target="_blank">
-            <img src="${v.snippet.thumbnails.high.url}">
-          </a>`).join("")}</div>`;
-      });
+    content.innerHTML=`
+      <iframe src="https://www.youtube.com/results?search_query=${encodeURIComponent(q)}"
+      style="width:100%;height:75vh;border:0;"></iframe>
+    `;
   }
 
   if(tab==="news"){
-    content.innerHTML=
-      card("https://www.google.com/favicon.ico","Google News",`https://news.google.com/search?q=${enc}`)+
-      card("https://www.bing.com/favicon.ico","Bing News",`https://www.bing.com/news/search?q=${enc}`);
-  }
-
-  if(tab==="flights"){
-    content.innerHTML=card(null,"Flightradar24","https://www.flightradar24.com");
+    content.innerHTML=`
+      <iframe src="https://news.google.com/search?q=${encodeURIComponent(q)}"
+      style="width:100%;height:75vh;border:0;"></iframe>
+    `;
   }
 }
 </script>
