--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 })();
 </script>
 
-<script async src="https://cse.google.com/cse.js?cx=949e339dabb3b4e60"></script>
-
 <title>Searchmas</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="theme-color" content="#1a73e8">
+
+<script async src="https://cse.google.com/cse.js?cx=949e339dabb3b4e60"></script>
 
 <style>
 html,body{margin:0;padding:0;height:100%;font-family:Arial,sans-serif;}
@@ -31,19 +31,8 @@ body{
 @media (max-width:768px){
   body{background:url('Santa.png') center center / cover no-repeat;}
 }
-
 #home{min-height:100vh;display:flex;flex-direction:column;justify-content:center;align-items:center;}
-
-.logo{
-  font-size:clamp(48px,10vw,80px);
-  font-weight:bold;
-  display:inline-flex;
-  flex-wrap:nowrap;
-  align-items:center;
-  justify-content:center;
-  line-height:1.1;
-}
-.logo span{display:inline-block;}
+.logo{font-size:clamp(48px,10vw,80px);font-weight:bold;display:inline-flex;}
 .logo span:nth-child(1){color:#4285f4}
 .logo span:nth-child(2){color:#ff9800}
 .logo span:nth-child(3){color:#fbbc05}
@@ -53,23 +42,21 @@ body{
 .logo span:nth-child(7){color:#fbbc05}
 .logo span:nth-child(8){color:#4285f4}
 .logo span:nth-child(9){color:#34a853}
-
 .search-box{max-width:580px;width:90%;padding:0 16px;}
 input{width:100%;padding:14px 20px;font-size:18px;border-radius:24px;border:1px solid #dfe1e5;}
-
 #results{display:none;max-width:1400px;margin:auto;padding:15px;min-height:100vh;}
-.topbar{display:flex;gap:12px;align-items:center;flex-wrap:wrap;}
-.back{cursor:pointer;font-size:22px;margin-bottom:8px;}
-
-.tabs{display:flex;gap:18px;margin:15px 0;border-bottom:1px solid #ddd;flex-wrap:wrap;}
+.topbar{display:flex;gap:12px;align-items:center;}
+.back{cursor:pointer;font-size:22px;}
+.tabs{display:flex;gap:18px;margin:15px 0;border-bottom:1px solid #ddd;}
 .tab{cursor:pointer;color:#5f6368;padding-bottom:8px;}
 .tab.active{color:#1a73e8;border-bottom:3px solid #1a73e8;}
-
-#content{background:#339933;border-radius:12px;padding:12px;}
+.grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:12px;}
+.grid img{width:100%;aspect-ratio:16/9;object-fit:cover;border-radius:8px;}
 </style>
 </head>
 
 <body>
+
 <div id="home">
   <div class="logo">
     <span>S</span><span>e</span><span>a</span><span>r</span><span>c</span>
@@ -97,8 +84,10 @@ input{width:100%;padding:14px 20px;font-size:18px;border-radius:24px;border:1px 
 </div>
 
 <script>
-let tab="all";
+const UNSPLASH="1IF0KThuYgH722kFgZ5TaZ1tyckTiMUri6DxUSeZ-fk";
+const YT="AIzaSyBKN7qNWVOSjIf040epQA579G29IzPxqpI";
 
+let tab="all";
 const homeEl=document.getElementById("home");
 const resEl=document.getElementById("results");
 const qHome=document.getElementById("qHome");
@@ -107,7 +96,8 @@ const content=document.getElementById("content");
 
 const params=new URLSearchParams(location.search);
 const startQ=params.get("q");
-if(startQ && startQ.trim()) showResults(startQ);
+if(startQ && startQ.trim()){showResults(startQ);}
+else{history.replaceState({}, "", location.pathname);}
 
 function startSearch(e){
   e.preventDefault();
@@ -116,25 +106,6 @@ function startSearch(e){
   history.pushState({}, "", "?q="+encodeURIComponent(q));
   showResults(q);
 }
-
-qTop.onkeydown=e=>{
-  if(e.key==="Enter"){
-    e.preventDefault();
-    const q=qTop.value.trim();
-    if(!q) return;
-    history.pushState({}, "", "?q="+encodeURIComponent(q));
-    search();
-  }
-};
-
-document.querySelectorAll(".tab").forEach(t=>{
-  t.onclick=()=>{
-    tab=t.dataset.tab;
-    document.querySelectorAll(".tab").forEach(x=>x.classList.remove("active"));
-    t.classList.add("active");
-    search();
-  };
-});
 
 function showResults(q){
   homeEl.style.display="none";
@@ -149,34 +120,53 @@ function goHome(){
   homeEl.style.display="flex";
 }
 
+document.querySelectorAll(".tab").forEach(t=>{
+  t.onclick=()=>{
+    tab=t.dataset.tab;
+    document.querySelectorAll(".tab").forEach(x=>x.classList.remove("active"));
+    t.classList.add("active");
+    search();
+  };
+});
+
 function search(){
   const q=qTop.value.trim();
   if(!q) return;
+  const enc=encodeURIComponent(q);
 
-  if(tab==="all" || tab==="images"){
-    content.innerHTML=`
-      <gcse-searchresults-only
-        data-query="${q}"
-        data-resultset="${tab==='images'?'image':'web'}">
-      </gcse-searchresults-only>
-    `;
+  if(tab==="all"){
+    content.innerHTML=`<div class="gcse-searchresults-only"></div>`;
     return;
   }
 
+  if(tab==="images"){
+    fetch(`https://api.unsplash.com/search/photos?query=${enc}&per_page=18`,{
+      headers:{Authorization:"Client-ID "+UNSPLASH}
+    })
+    .then(r=>r.json())
+    .then(d=>{
+      content.innerHTML=`<div class="grid">${d.results.map(i=>`<img src="${i.urls.regular}">`).join("")}</div>`;
+    });
+  }
+
   if(tab==="videos"){
-    content.innerHTML=`
-      <iframe src="https://www.youtube.com/results?search_query=${encodeURIComponent(q)}"
-      style="width:100%;height:75vh;border:0;"></iframe>
-    `;
+    fetch(`https://www.googleapis.com/youtube/v3/search?part=snippet&type=video&maxResults=12&q=${enc}&key=${YT}`)
+      .then(r=>r.json())
+      .then(d=>{
+        content.innerHTML=`<div class="grid">${d.items.map(v=>`
+          <a href="https://youtube.com/watch?v=${v.id.videoId}" target="_blank">
+            <img src="${v.snippet.thumbnails.high.url}">
+          </a>`).join("")}</div>`;
+      });
   }
 
   if(tab==="news"){
-    content.innerHTML=`
-      <iframe src="https://news.google.com/search?q=${encodeURIComponent(q)}"
-      style="width:100%;height:75vh;border:0;"></iframe>
-    `;
+    content.innerHTML=
+      `<a class="card" href="https://news.google.com/search?q=${enc}" target="_blank">Google News</a>
+       <a class="card" href="https://www.bing.com/news/search?q=${enc}" target="_blank">Bing News</a>`;
   }
 }
 </script>
+
 </body>
 </html>
