--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -104,10 +105,10 @@ input{width:100%; padding:14px 20px; font-size:18px; border-radius:24px; border:
   </div>
 
   <div class="tabs">
-    <div class="tab active" data-id="1">All</div>
-    <div class="tab" data-id="2">Images</div>
-    <div class="tab" data-id="3">Videos</div>
-    <div class="tab" data-id="4">News</div>
+    <div class="tab active" data-tab="all">All</div>
+    <div class="tab" data-tab="images">Images</div>
+    <div class="tab" data-tab="videos">Videos</div>
+    <div class="tab" data-tab="news">News</div>
   </div>
 
   <div id="content"></div>
@@ -117,7 +118,7 @@ input{width:100%; padding:14px 20px; font-size:18px; border-radius:24px; border:
 const UNSPLASH="1IF0KThuYgH722kFgZ5TaZ1tyckTiMUri6DxUSeZ-fk";
 const YT="AIzaSyBKN7qNWVOSjIf040epQA579G29IzPxqpI";
 
-let buttonId = 1; // default 'All'
+let tab="all";
 const homeEl=document.getElementById("home");
 const resEl=document.getElementById("results");
 const qHome=document.getElementById("qHome");
@@ -149,11 +150,11 @@ function goHome(){
   homeEl.style.display="flex";
 }
 
-document.querySelectorAll(".tab").forEach(tabEl=>{
-  tabEl.onclick=()=>{
-    buttonId = parseInt(tabEl.dataset.id);
+document.querySelectorAll(".tab").forEach(t=>{
+  t.onclick=()=>{
+    tab=t.dataset.tab;
     document.querySelectorAll(".tab").forEach(x=>x.classList.remove("active"));
-    tabEl.classList.add("active");
+    t.classList.add("active");
     search();
   };
 });
@@ -163,8 +164,7 @@ function search(){
   if(!q) return;
   const enc=encodeURIComponent(q);
 
-  // All tab (ID = 1)
-  if(buttonId===1){
+  if(tab==="all"){
     content.innerHTML=`<div id="pseWrapper"><div class="gcse-searchresults-only"></div></div>`;
     const waitPSE = setInterval(()=>{
       if(window.google && google.search && google.search.cse && google.search.cse.element){
@@ -175,8 +175,7 @@ function search(){
     return;
   }
 
-  // Images tab (ID = 2)
-  if(buttonId===2){
+  if(tab==="images"){
     fetch(`https://api.unsplash.com/search/photos?query=${enc}&per_page=18`,{
       headers:{Authorization:"Client-ID "+UNSPLASH}
     })
@@ -184,11 +183,9 @@ function search(){
     .then(d=>{
       content.innerHTML=`<div class="grid">${d.results.map(i=>`<img src="${i.urls.regular}">`).join("")}</div>`;
     });
-    return;
   }
 
-  // Videos tab (ID = 3)
-  if(buttonId===3){
+  if(tab==="videos"){
     fetch(`https://www.googleapis.com/youtube/v3/search?part=snippet&type=video&maxResults=12&q=${enc}&key=${YT}`)
       .then(r=>r.json())
       .then(d=>{
@@ -197,11 +194,9 @@ function search(){
             <img src="${v.snippet.thumbnails.high.url}">
           </a>`).join("")}</div>`;
       });
-    return;
   }
 
-  // News tab (ID = 4)
-  if(buttonId===4){
+  if(tab==="news"){
     content.innerHTML=`<div class="news-col">
       <a class="news-card" href="https://news.google.com/search?q=${enc}" target="_blank">
         <img src="https://google.com/favicon.ico" width="32" height="32">
@@ -212,7 +207,6 @@ function search(){
         <div><div style="font-size:18px;font-weight:600;">Bing News</div></div>
       </a>
     </div>`;
-    return;
   }
 }
 </script>
