--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,7 +7,7 @@
 <link rel="manifest" href="manifest.json">
 
 <script>
-  // IE detection using 'if (ie)' style
+  // IE detection
   var ie = /*@cc_on!@*/false || !!document.documentMode;
   if (ie){
     window.location.replace("ie.html");
@@ -77,12 +76,6 @@ input{width:100%; padding:14px 20px; font-size:18px; border-radius:24px; border:
 .gsc-tabsArea,
 .gsc-adBlock,
 .gcsc-find-more-on-google { display:none !important; }
-
-/* wrap PSE results in white card */
-#pseWrapper{
-  background:white; border-radius:20px; padding:20px;
-  box-shadow:0 4px 12px rgba(0,0,0,0.08);
-}
 </style>
 </head>
 
@@ -105,10 +98,10 @@ input{width:100%; padding:14px 20px; font-size:18px; border-radius:24px; border:
   </div>
 
   <div class="tabs">
-    <div class="tab active" data-tab="all">All</div>
-    <div class="tab" data-tab="images">Images</div>
-    <div class="tab" data-tab="videos">Videos</div>
-    <div class="tab" data-tab="news">News</div>
+    <div class="tab active" data-id="1">All</div>
+    <div class="tab" data-id="2">Images</div>
+    <div class="tab" data-id="3">Videos</div>
+    <div class="tab" data-id="4">News</div>
   </div>
 
   <div id="content"></div>
@@ -118,7 +111,7 @@ input{width:100%; padding:14px 20px; font-size:18px; border-radius:24px; border:
 const UNSPLASH="1IF0KThuYgH722kFgZ5TaZ1tyckTiMUri6DxUSeZ-fk";
 const YT="AIzaSyBKN7qNWVOSjIf040epQA579G29IzPxqpI";
 
-let tab="all";
+let buttonId = 1; // default 'All'
 const homeEl=document.getElementById("home");
 const resEl=document.getElementById("results");
 const qHome=document.getElementById("qHome");
@@ -150,11 +143,11 @@ function goHome(){
   homeEl.style.display="flex";
 }
 
-document.querySelectorAll(".tab").forEach(t=>{
-  t.onclick=()=>{
-    tab=t.dataset.tab;
+document.querySelectorAll(".tab").forEach(tabEl=>{
+  tabEl.onclick=()=>{
+    buttonId = parseInt(tabEl.dataset.id);
     document.querySelectorAll(".tab").forEach(x=>x.classList.remove("active"));
-    t.classList.add("active");
+    tabEl.classList.add("active");
     search();
   };
 });
@@ -164,8 +157,9 @@ function search(){
   if(!q) return;
   const enc=encodeURIComponent(q);
 
-  if(tab==="all"){
-    content.innerHTML=`<div id="pseWrapper"><div class="gcse-searchresults-only"></div></div>`;
+  // All tab (ID = 1)
+  if(buttonId===1){
+    content.innerHTML=`<div class="gcse-searchresults-only"></div>`;
     const waitPSE = setInterval(()=>{
       if(window.google && google.search && google.search.cse && google.search.cse.element){
         clearInterval(waitPSE);
@@ -175,7 +169,8 @@ function search(){
     return;
   }
 
-  if(tab==="images"){
+  // Images tab (ID = 2)
+  if(buttonId===2){
     fetch(`https://api.unsplash.com/search/photos?query=${enc}&per_page=18`,{
       headers:{Authorization:"Client-ID "+UNSPLASH}
     })
@@ -183,9 +178,11 @@ function search(){
     .then(d=>{
       content.innerHTML=`<div class="grid">${d.results.map(i=>`<img src="${i.urls.regular}">`).join("")}</div>`;
     });
+    return;
   }
 
-  if(tab==="videos"){
+  // Videos tab (ID = 3)
+  if(buttonId===3){
     fetch(`https://www.googleapis.com/youtube/v3/search?part=snippet&type=video&maxResults=12&q=${enc}&key=${YT}`)
       .then(r=>r.json())
       .then(d=>{
@@ -194,9 +191,11 @@ function search(){
             <img src="${v.snippet.thumbnails.high.url}">
           </a>`).join("")}</div>`;
       });
+    return;
   }
 
-  if(tab==="news"){
+  // News tab (ID = 4)
+  if(buttonId===4){
     content.innerHTML=`<div class="news-col">
       <a class="news-card" href="https://news.google.com/search?q=${enc}" target="_blank">
         <img src="https://google.com/favicon.ico" width="32" height="32">
@@ -207,6 +206,7 @@ function search(){
         <div><div style="font-size:18px;font-weight:600;">Bing News</div></div>
       </a>
     </div>`;
+    return;
   }
 }
 </script>
